tests/rosetta/out/Pascal/crc-32-2.error
parse: error[P040]: /workspace/mochi/tests/rosetta/x/Mochi/crc-32-2.mochi:20:26: lexer: invalid input text "; i = i + 1 }\n  ..."
  --> /workspace/mochi/tests/rosetta/x/Mochi/crc-32-2.mochi:20:26

 20 |   while i < n { v = v / 2; i = i + 1 }
    |                          ^

help:
  String literals must be properly closed with a `"`.